Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2609

Qmlobserver doesn't compile on Windows

XMLWordPrintable

    • c6c2486d5d46d45cd56a061af4b11821f04f58ae

      C:\dev\qt\qt-4.7\qtc-qmlobserver>jom
      
      jom 0.9.3 - empower your cores
      
      C:\dev\bin\jom.exe -nologo -j 2 -f Makefile.Debug all
      C:\dev\qt\qt-4.7\bin\moc.exe -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQMLOBSER
      VER -DGL_SUPPORTED -DBUILD_QMLJSDEBUGGER_STATIC_LIB -DQWEAKPOINTER_ENABLE_ARROW
      -DQT_DLL -DQT_DECLARATIVE_LIB -DQT_SCRIPT_LIB -DQT_SQL_LIB -DQT_OPENGL_LIB -DQT_
      GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_S
      SE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -I"..\include\QtCore" -I"
      ..\include\QtNetwork" -I"..\include\QtGui" -I"..\include\QtOpenGL" -I"..\include
      \QtSql" -I"..\include\QtScript" -I"..\include\QtDeclarative" -I"..\include" -I".
      " -I"qmljsdebugger\include" -I"qmljsdebugger\editor" -I"..\include\ActiveQt" -I"
      tmp\moc\debug_shared" -I"." -I"..\mkspecs\win32-msvc2008" -D_MSC_VER=1500 -DWIN3
      2 qmljsdebugger\editor\boundingrecthighlighter.h -o tmp\moc\debug_shared\moc_bou
      ndingrecthighlighter.cpp
      cl -c -nologo -Zm200 -Zc:wchar_t- -Zi -MDd -MP -GR -EHsc -W3 -w34100 -w34189 -DU
      NICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQMLOBSERVER -DGL_SUPPORTED -DBUILD_QMLJS
      DEBUGGER_STATIC_LIB -DQWEAKPOINTER_ENABLE_ARROW -DQT_DLL -DQT_DECLARATIVE_LIB -D
      QT_SCRIPT_LIB -DQT_SQL_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CO
      RE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SS
      E2 -DQT_THREAD_SUPPORT -I"..\include\QtCore" -I"..\include\QtNetwork" -I"..\incl
      ude\QtGui" -I"..\include\QtOpenGL" -I"..\include\QtSql" -I"..\include\QtScript"
      -I"..\include\QtDeclarative" -I"..\include" -I"." -I"qmljsdebugger\include" -I"q
      mljsdebugger\editor" -I"..\include\ActiveQt" -I"tmp\moc\debug_shared" -I"." -I".
      .\mkspecs\win32-msvc2008" -Fotmp\obj\debug_shared\ @C:\Users\owerfeld\AppData\Lo
      cal\Temp\moc_qdeclarativedebugservice_p.obj.6372.1497.jom
      moc_qdeclarativedebugservice_p.cpp
      cl -c -nologo -Zm200 -Zc:wchar_t- -Zi -MDd -MP -GR -EHsc -W3 -w34100 -w34189 -DU
      NICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQMLOBSERVER -DGL_SUPPORTED -DBUILD_QMLJS
      DEBUGGER_STATIC_LIB -DQWEAKPOINTER_ENABLE_ARROW -DQT_DLL -DQT_DECLARATIVE_LIB -D
      QT_SCRIPT_LIB -DQT_SQL_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CO
      RE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SS
      E2 -DQT_THREAD_SUPPORT -I"..\include\QtCore" -I"..\include\QtNetwork" -I"..\incl
      ude\QtGui" -I"..\include\QtOpenGL" -I"..\include\QtSql" -I"..\include\QtScript"
      -I"..\include\QtDeclarative" -I"..\include" -I"." -I"qmljsdebugger\include" -I"q
      mljsdebugger\editor" -I"..\include\ActiveQt" -I"tmp\moc\debug_shared" -I"." -I".
      .\mkspecs\win32-msvc2008" -Fotmp\obj\debug_shared\ @C:\Users\owerfeld\AppData\Lo
      cal\Temp\moc_selectiontool.obj.6372.1747.jom
      moc_selectiontool.cpp
      tmp\moc\debug_shared\moc_qdeclarativedebugservice_p.cpp(40) : warning C4273: 'st
      aticMetaObject': Inkonsistente DLL-Bindung.
              c:\dev\qt\qt-4.7\qtc-qmlobserver\tmp\moc\debug_shared\../../../qmljsdebu
      gger/include/qt_private/qdeclarativedebugservice_p.h(56): Siehe vorherige Defini
      tion von 'public: static QMetaObject const QDeclarativeDebugService::staticMetaO
      bject'
      tmp\moc\debug_shared\moc_qdeclarativedebugservice_p.cpp(40) : error C2491: 'QDec
      larativeDebugService::staticMetaObject': Definition von Statisches Datenmember f
      ür dllimport nicht zulässig
      tmp\moc\debug_shared\moc_qdeclarativedebugservice_p.cpp(50) : warning C4273: 'QD
      eclarativeDebugService::metaObject': Inkonsistente DLL-Bindung.
              c:\dev\qt\qt-4.7\qtc-qmlobserver\tmp\moc\debug_shared\../../../qmljsdebu
      gger/include/qt_private/qdeclarativedebugservice_p.h(56): Siehe vorherige Defini
      tion von 'metaObject'
      tmp\moc\debug_shared\moc_qdeclarativedebugservice_p.cpp(55) : warning C4273: 'QD
      eclarativeDebugService::qt_metacast': Inkonsistente DLL-Bindung.
              c:\dev\qt\qt-4.7\qtc-qmlobserver\tmp\moc\debug_shared\../../../qmljsdebu
      gger/include/qt_private/qdeclarativedebugservice_p.h(56): Siehe vorherige Defini
      tion von 'qt_metacast'
      tmp\moc\debug_shared\moc_qdeclarativedebugservice_p.cpp(63) : warning C4273: 'QD
      eclarativeDebugService::qt_metacall': Inkonsistente DLL-Bindung.
              c:\dev\qt\qt-4.7\qtc-qmlobserver\tmp\moc\debug_shared\../../../qmljsdebu
      gger/include/qt_private/qdeclarativedebugservice_p.h(56): Siehe vorherige Defini
      tion von 'qt_metacall'
      command failed with exit code 2
      command failed with exit code 2
      
      C:\dev\qt\qt-4.7\qtc-qmlobserver>
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            owerfeldt Carsten Owerfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes