QmlJSDebugger: Fix linkage error

Make sure that the private API used from Qt is compiled with
Q_DECL_IMPORT.

Task-number: QTCREATORBUG-2609